--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "express": "^4.16.2",
+    "multer": "^1.3.0",
     "net": "^1.0.2",
     "yarn": "^1.5.1"
   }
