--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "csv": "^2.0.0",
     "express": "^4.16.2",
+    "fs": "0.0.1-security",
+    "iconv": "^2.3.0",
     "jquery": "^3.3.1",
     "multer": "^1.3.0",
     "net": "^1.0.2",
