--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "consolidate": "^0.15.1",
     "csv": "^2.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
-    "iconv": "^2.3.0",
+    "iconv-lite": "0.4.18",
     "jquery": "^3.3.1",
     "multer": "^1.3.0",
+    "mustache": "^2.3.0",
     "net": "^1.0.2",
     "window": "^4.2.5",
     "yarn": "^1.5.1"
