--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "bootstrap-slider": "^10.0.0",
     "consolidate": "^0.15.1",
     "csv": "^2.0.0",
     "express": "^4.16.2",
