--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0",
-    "bootstrap-slider": "^10.0.0",
-    "consolidate": "^0.15.1",
-    "csv": "^2.0.0",
-    "express": "^4.16.2",
-    "express-session": "^1.15.6",
-    "fs": "0.0.1-security",
-    "iconv-lite": "0.4.18",
-    "jquery": "^3.3.1",
-    "multer": "^1.3.0",
-    "mustache": "^2.3.0",
-    "net": "^1.0.2",
-    "window": "^4.2.5",
-    "yarn": "^1.5.1"
-  }
+ "name": "xiashuzhongyao",
+ "version": "1.0.0",
+ "scripts": {
+  "build": "babel static/src --out-dir static/lib && .\\scripts\\bundle.sh"
+ },
+ "dependencies": {
+  "babel": "^6.23.0",
+  "babel-preset-env": "^1.6.1",
+  "body-parser": "^1.18.2",
+  "bootstrap": "^4.0.0",
+  "bootstrap-slider": "^10.0.0",
+  "consolidate": "^0.15.1",
+  "csv": "^2.0.0",
+  "express": "^4.16.2",
+  "express-session": "^1.15.6",
+  "fs": "0.0.1-security",
+  "iconv-lite": "0.4.18",
+  "jquery": "^3.3.1",
+  "multer": "^1.3.0",
+  "mustache": "^2.3.0",
+  "net": "^1.0.2",
+  "node-xlsx": "^0.12.0",
+  "window": "^4.2.5",
+  "yarn": "^1.5.1"
+ },
+ "babel": {
+  "presets": [
+   "env"
+  ]
+ },
+ "devDependencies": {
+  "babel-cli": "^6.26.0"
+ }
 }
