--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "body-parser": "^1.18.2",
   "bootstrap": "^4.0.0",
   "bootstrap-slider": "^10.0.0",
+  "browserify": "^16.1.1",
   "consolidate": "^0.15.1",
   "csv": "^2.0.0",
   "express": "^4.16.2",
